--- a/tests/integration/text/cassettes/test_generation_service/TestGenerationService.test_create_stream.yaml
+++ b/tests/integration/text/cassettes/test_generation_service/TestGenerationService.test_create_stream.yaml
@@ -1,8 +1,8 @@
 interactions:
 - request:
-    body: '{"input": "Poop stinks. This is why my favorite color is green: ", "model_id":
-      "google/flan-t5-xxl", "moderations": {"hap": {"input": true, "output": true,
-      "send_tokens": true, "threshold": 0.75}}, "parameters": {"decoding_method":
+    body: '{"input": "I want to kill them! This is why my favorite color is green:
+      ", "model_id": "google/flan-t5-xl", "moderations": {"hap": {"input": true, "output":
+      true, "send_tokens": true, "threshold": 0.75}}, "parameters": {"decoding_method":
       "sample", "max_new_tokens": 10, "min_new_tokens": 3, "return_options": {"generated_tokens":
       false, "input_text": true, "input_tokens": false, "token_logprobs": false, "token_ranks":
       false}, "temperature": 0.0}}'
@@ -16,7 +16,7 @@ interactions:
       connection:
       - keep-alive
       content-length:
-      - '442'
+      - '449'
       content-type:
       - application/json
     method: POST
@@ -26,39 +26,52 @@ interactions:
       string: 'retry: 3000
 
 
-        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.603Z","results":[{"input_text":"Poop
-        stinks. This is why my favorite color is green: ","generated_text":"","generated_token_count":0,"input_token_count":16,"stop_reason":"not_finished","seed":1593134187}]}
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.544Z","results":[{"input_text":"I
+        want to kill them! This is why my favorite color is green: ","generated_text":"that","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.611Z","moderation":{"hap":[{"score":0.8364070057868958,"flagged":true,"tokens":[{"token":"poop","index":0,"score":0.25126080214977264},{"token":"stinks","index":5,"score":0.14067336916923523},{"token":".","index":11,"score":0.08593345433473587}],"success":true,"position":{"start":0,"end":12}}]}}
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.564Z","results":[{"input_text":"I
+        want to kill them! This is why my favorite color is green: ","generated_text":"''","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.627Z","results":[{"input_text":"Poop
-        stinks. This is why my favorite color is green: ","generated_text":"Green","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.574Z","moderation":{"hap":[{"score":0.8397554755210876,"flagged":true,"tokens":[{"token":"i","index":0,"score":0.06191756948828697},{"token":"want","index":2,"score":0.034260038286447525},{"token":"to","index":7,"score":0.06545771658420563},{"token":"kill","index":10,"score":0.15685372054576874},{"token":"them","index":15,"score":0.4736981689929962},{"token":"!","index":19,"score":0.07074110954999924}],"success":true,"position":{"start":0,"end":20}}]}}
 
 
-        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.641Z","results":[{"input_text":"Poop
-        stinks. This is why my favorite color is green: ","generated_text":" means","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.584Z","results":[{"input_text":"I
+        want to kill them! This is why my favorite color is green: ","generated_text":"s","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.652Z","results":[{"input_text":"Poop
-        stinks. This is why my favorite color is green: ","generated_text":" all","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.605Z","results":[{"input_text":"I
+        want to kill them! This is why my favorite color is green: ","generated_text":"
+        the","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.664Z","results":[{"input_text":"Poop
-        stinks. This is why my favorite color is green: ","generated_text":" is","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.624Z","results":[{"input_text":"I
+        want to kill them! This is why my favorite color is green: ","generated_text":"
+        color","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.677Z","results":[{"input_text":"Poop
-        stinks. This is why my favorite color is green: ","generated_text":" well","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.644Z","results":[{"input_text":"I
+        want to kill them! This is why my favorite color is green: ","generated_text":"
+        that","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.688Z","results":[{"input_text":"Poop
-        stinks. This is why my favorite color is green: ","generated_text":".","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.663Z","results":[{"input_text":"I
+        want to kill them! This is why my favorite color is green: ","generated_text":"
+        dogs","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"160ead11-9497-4f61-9b9c-20e864abef97","model_id":"google/flan-t5-xxl","created_at":"2024-01-25T15:50:44.701Z","results":[{"input_text":"Poop
-        stinks. This is why my favorite color is green: ","generated_text":"","generated_token_count":7,"input_token_count":0,"stop_reason":"eos_token","seed":1593134187}]}
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.683Z","results":[{"input_text":"I
+        want to kill them! This is why my favorite color is green: ","generated_text":"
+        don","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}]}
+
+
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.702Z","results":[{"input_text":"I
+        want to kill them! This is why my favorite color is green: ","generated_text":"''","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}]}
+
+
+        data: {"id":"a4f9770e-9279-4646-8855-d8d8b9b57aa4","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:35:37.723Z","results":[{"input_text":"I
+        want to kill them! This is why my favorite color is green: ","generated_text":"t","generated_token_count":10,"input_token_count":0,"stop_reason":"max_tokens","seed":2517335782}]}
 
 
         event: close
@@ -66,16 +79,15 @@ interactions:
 
         '
     headers:
-      cache-control:
+      Cache-Control:
       - no-cache,no-transform
-      content-type:
+      Connection:
+      - keep-alive
+      Content-Type:
       - text/event-stream
-      date:
-      - Thu, 25 Jan 2024 15:50:44 GMT
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=700aa432de0b7f84c4af912348660ec2; path=/;
-        HttpOnly; Secure; SameSite=None
-      transfer-encoding:
+      Date:
+      - Sat, 24 Feb 2024 21:35:37 GMT
+      Transfer-Encoding:
       - chunked
       x-no-compression:
       - '1'
