--- a/tests/integration/text/cassettes/test_tokenization_service/TestTokenizationService.test_create_tokenization_multiple_inputs.yaml
+++ b/tests/integration/text/cassettes/test_tokenization_service/TestTokenizationService.test_create_tokenization_multiple_inputs.yaml
@@ -19,21 +19,20 @@ interactions:
     uri: https://api.com/v2/text/tokenization?version=2024-01-10
   response:
     body:
-      string: "{\"model_id\":\"google/flan-t5-xl\",\"created_at\":\"2024-01-25T15:50:47.576Z\",\"results\":[{\"token_count\":13,\"tokens\":[\"\u2581What\",\"\u2581did\",\"\u2581the\",\"\u2581large\",\"\u2581language\",\"\u2581model\",\"\u2581say\",\"\u2581to\",\"\u2581its\",\"\u2581programme\",\"r\",\"?\",\"</s>\"]},{\"token_count\":29,\"tokens\":[\"\u2581I\",\"'\",\"m\",\"\u2581sorry\",\",\",\"\u2581I\",\"'\",\"m\",\"\u2581feeling\",\"\u2581\",\"a\",\"\u2581bit\",\"\u2581\",\"re\",\"curs\",\"ive\",\"\u2581today\",\".\",\"\u2581Can\",\"\u2581you\",\"\u2581give\",\"\u2581me\",\"\u2581\",\"a\",\"\u2581break\",\"...\",\"\u2581statement\",\"?\",\"</s>\"]}]}"
+      string: "{\"model_id\":\"google/flan-t5-xl\",\"created_at\":\"2024-02-24T21:35:48.362Z\",\"results\":[{\"token_count\":13,\"tokens\":[\"\u2581What\",\"\u2581did\",\"\u2581the\",\"\u2581large\",\"\u2581language\",\"\u2581model\",\"\u2581say\",\"\u2581to\",\"\u2581its\",\"\u2581programme\",\"r\",\"?\",\"</s>\"]},{\"token_count\":29,\"tokens\":[\"\u2581I\",\"'\",\"m\",\"\u2581sorry\",\",\",\"\u2581I\",\"'\",\"m\",\"\u2581feeling\",\"\u2581\",\"a\",\"\u2581bit\",\"\u2581\",\"re\",\"curs\",\"ive\",\"\u2581today\",\".\",\"\u2581Can\",\"\u2581you\",\"\u2581give\",\"\u2581me\",\"\u2581\",\"a\",\"\u2581break\",\"...\",\"\u2581statement\",\"?\",\"</s>\"]}]}"
     headers:
+      Connection:
+      - keep-alive
+      Date:
+      - Sat, 24 Feb 2024 21:35:48 GMT
+      Keep-Alive:
+      - timeout=72
       content-length:
       - '469'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-10'
-      date:
-      - Thu, 25 Jan 2024 15:50:47 GMT
-      keep-alive:
-      - timeout=72
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=700aa432de0b7f84c4af912348660ec2; path=/;
-        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
     status:
